[tool.poetry]
name = "asyncapi-eventrouter"
version = "0.0.1"
description = ""
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/noteable-io/asyncapi_eventrouter"
authors = ["Matt Kafonek <kafonek@noteable.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
PyYAML = "^6.0"
aioredis = {version = "^2.0.0", optional = true}
mqttools = {version = "^0.47.1", optional = true}
fastapi = {version = "^0.70.0", optional = true}
uvicorn = {version = "^0.15.0", optional = true}
websockets = {version = "^10.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.1.2"}
pytest-cov = "^3.0.0"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"
pre-commit = "^2.15.0"
mkdocs = "^1.2.3"
typer = "^0.4.0"
pytest-asyncio = "^0.16.0"

[tool.poetry.extras]
examples = ["fastapi", "uvicorn", "websockets", "aioredis", "mqttools"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["asyncapi_eventrouter"]

[tool.coverage.report]
show_missing = true
fail_under = 100
